# wolframMiddleLayer

./: .dockerignore  .gitignore  Dockerfile  README.md  config.json  pyproject.toml
.github/workflows/: deploy.yml  test-report.yml
evaluation_function/: dev.py  evaluation.py  evaluation_test.py  main.py  preview.py  preview_test.py
